--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
+
+node_modules/
+
+
+.env
+.env.local
+.env.*.local
+
+
+logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+tmp/
+temp/
+
+
+uploads/
+
+
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+
+data/
+visitors.json
+
+
+.vscode/
+.idea/
+
+dist/
+build/
