--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jwt-decode": "^4.0.0",
     "morgan": "^1.10.1"
   }
 }
